--- a/css/lab08.css
+++ b/css/lab08.css
@@ -1,10 +1,44 @@
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans+TC:400,900');
+@import url('https://fonts.googleapis.com/css?family=Patrick+Hand+SC');
+@import url('https://fonts.googleapis.com/css?family=Quicksand:300');
+
+body {
+  background-color: #6E92A1;
+  margin: 0;
+  padding: 0;
+}
 #title {
   text-align: center;
-  margin-bottom: 10%;
-  margin-top: 10%;
+  font-size: 24pt;
+  font-family: 'Patrick Hand SC', cursive;
+  padding-bottom: 5%;
+  padding-top: 5%;
+  margin: 0;
+  background-color: #FFFAFA;
 }
+
+#title h1 {
+  padding: 0;
+  margin: 0;
+  animation-name: example;
+  animation-duration: 2s;
+}
+
+@keyframes example {
+    0%   {transform: translate(-70%, 0)};
+    100%  {transform: translate(0, 0)};
+  }
+
+
+
 #gallery {
 
+}
+
+#gallery::after {
+    content: "";
+    clear: both;
+    display: table;
 }
 
 .animalbox {
@@ -19,20 +53,86 @@
 
 }
 
-.infodiv {
+.infodiv h3 {
+  font-size: 16pt;
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
+  margin: 0;
+  font-family: 'Noto Sans TC', sans-serif;
+}
 
+.infodiv p {
+  font-size: 12pt;
+  font-family: 'Noto Sans TC', sans-serif;
+  margin-top: 0;
 }
 
 .blockbutton {
   display: block;
-  width: 33.3%;
+  width: calc(100% / 3);
   border: none;
-  background-color: #AAAAAA;
+  background-color: #022636;
   color: white;
-  padding: 14px 28px;
+  outline: none;
+  padding: 1em 1.2em;
   font-size: 16px;
+  font-family: 'Quicksand', sans-serif;
   cursor: pointer;
   text-align: center;
   float:left;
-  margin-bottom: 2em;
+  margin: 0 0 2em 0;
+}
+
+.blockbutton:hover {
+    background-color: #103D50;
+    box-shadow: 0 0 5px #000000;
+
+}
+
+.blockbutton:active {
+  background-color: #AAAAAA;
+  box-shadow: 0 0 5px #000000;
+  transform: translateY(3px);
+}
+
+
+@media screen and (max-width: 915px) {
+
+  * { font-size: 1.7rem; }
+
+  .animalbox {
+    width: calc(100% / 3);
+  }
+
+}
+
+/* for 700px or less */
+@media screen and (max-width: 705px) {
+
+  * { font-size: 1.5rem; }
+
+  .animalbox {
+    width: 50%;
+  }
+
+  .blockbutton {
+    font-size: 12pt;
+  }
+
+}
+
+
+/* for 480px or less */
+@media screen and (max-width: 500px) {
+
+  * { font-size: 1.4rem; }
+
+  .animalbox {
+    width: 100%;
+  }
+
+  .blockbutton {
+    font-size: 10pt;
+  }
+
 }
