--- a/css/lab08.css
+++ b/css/lab08.css
@@ -61,6 +61,13 @@ body {
   font-family: 'Noto Sans TC', sans-serif;
 }
 
+.infodiv h4 {
+  font-size: 14pt;
+  padding: 0;
+  margin: 0;
+  font-family: 'Noto Sans TC', sans-serif;
+}
+
 .infodiv p {
   font-size: 12pt;
   font-family: 'Noto Sans TC', sans-serif;
