--- a/css/lab08.css
+++ b/css/lab08.css
@@ -7,6 +7,18 @@ body {
   margin: 0;
   padding: 0;
 }
+
+#paw {
+  width: 2em;
+  animation-name: appear;
+  animation-duration: 2s;
+}
+
+@keyframes appear {
+    0%   {width: 0};
+    100%  {width: 2em};
+  }
+
 #title {
   text-align: center;
   font-size: 24pt;
@@ -20,16 +32,14 @@ body {
 #title h1 {
   padding: 0;
   margin: 0;
-  animation-name: example;
+  animation-name: slide;
   animation-duration: 2s;
 }
 
-@keyframes example {
+@keyframes slide {
     0%   {transform: translate(-70%, 0)};
     100%  {transform: translate(0, 0)};
   }
-
-
 
 #gallery {
 
