--- a/css/lab08.css
+++ b/css/lab08.css
@@ -12,6 +12,7 @@ body {
   width: 2em;
   animation-name: appear;
   animation-duration: 2s;
+  filter: drop-shadow(2px 4px 2px grey);
 }
 
 @keyframes appear {
@@ -45,25 +46,21 @@ body {
 
 }
 
-#gallery::after {
-    content: "";
-    clear: both;
-    display: table;
-}
 
 .animalbox {
-  text-align: center;
   width: 25%;
   float: left;
 }
 
 .image {
-  display: block;
-  margin: 0 auto;
-
+  text-align: center;
+}
+.infodiv {
+  box-sizing: border-box;
 }
 
 .infodiv h3 {
+  text-align: center;
   font-size: 16pt;
   padding-top: 0.5em;
   padding-bottom: 0.5em;
@@ -71,6 +68,10 @@ body {
   font-family: 'Noto Sans TC', sans-serif;
 }
 
+.infodiv li {
+  font-family: 'Noto Sans TC', sans-serif;
+  font-size: 14pt;
+}
 .infodiv h4 {
   font-size: 14pt;
   padding: 0;
@@ -92,7 +93,6 @@ body {
   color: white;
   outline: none;
   padding: 1em 1.2em;
-  font-size: 16px;
   font-family: 'Quicksand', sans-serif;
   cursor: pointer;
   text-align: center;
@@ -112,21 +112,40 @@ body {
   transform: translateY(3px);
 }
 
+.treatButton {
+  box-sizing: border-box;
+  display: block;
+  width: 100%;
+  border: none;
+  background-color: #022636;
+  color: white;
+  outline: none;
+  padding: 1em 1em;
+  font-family: 'Quicksand', sans-serif;
+  cursor: pointer;
+  text-align: center;
+  margin: 1em 0 1em 0;
+}
 
-@media screen and (max-width: 915px) {
-
-  * { font-size: 1.7rem; }
+@media screen and (max-width: 600px) {
 
   .animalbox {
-    width: calc(100% / 3);
+    width: 100%;
+  }
+
+  .blockbutton {
+    font-size: 12pt;
+  }
+  .treatButton {
+    font-size: 12pt;
+  }
+  .infodiv {
+    padding: 1em 8em 1em 8em;
   }
 
 }
 
-/* for 700px or less */
-@media screen and (max-width: 705px) {
-
-  * { font-size: 1.5rem; }
+@media screen and (min-width: 600px) {
 
   .animalbox {
     width: 50%;
@@ -136,20 +155,47 @@ body {
     font-size: 12pt;
   }
 
+  .treatButton {
+    font-size: 12pt;
+  }
+
+  .infodiv {
+    padding: 1em 2em 1em 2em;
+  }
+
+
 }
 
-
-/* for 480px or less */
-@media screen and (max-width: 500px) {
-
-  * { font-size: 1.4rem; }
+@media screen and (min-width: 768px) {
 
   .animalbox {
-    width: 100%;
+    width: calc(100% / 3);
   }
 
   .blockbutton {
-    font-size: 10pt;
+    font-size: 16pt;
+  }
+
+  .treatButton {
+    font-size: 14pt;
+  }
+
+
+
+}
+
+@media screen and (min-width: 992px) {
+
+  .animalbox {
+    width: 25%;
+  }
+
+  .blockbutton {
+    font-size: 16pt;
+  }
+
+  .treatButton {
+    font-size: 14pt;
   }
 
 }
