--- a/css/lab08.css
+++ b/css/lab08.css
@@ -42,11 +42,6 @@ body {
     100%  {transform: translate(0, 0)};
   }
 
-#gallery {
-
-}
-
-
 .animalbox {
   width: 25%;
   float: left;
@@ -54,7 +49,13 @@ body {
 
 .image {
   text-align: center;
+  transition: width 1s, height 1s, transform 1s;
 }
+
+.image:hover {
+  transform: scale(1.15);
+}
+
 .infodiv {
   box-sizing: border-box;
 }
